[tool.poetry]
name = "room-reservation"
version = "0.1.0"
description = ""
authors = ["hikary <tronin371@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
fastapi = "^0.99.1"
aiosqlite = "^0.19.0"
sqlalchemy = "^2.0.18"
alembic = "^1.11.1"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.0"}



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
